--- a/src/stylesheets/assignment06.css
+++ b/src/stylesheets/assignment06.css
@@ -1,30 +1,144 @@
 :root {
     font-family: Arial, Helvetica, sans-serif;
     box-sizing: border-box;
+    font-size: 16px;
 }
 *, ::before, ::after {
     box-sizing: inherit;
 }
 body {
-    margin: 0 ;
+    margin: 0;
 }
 
 header {
-    background-color: lightgray;
+    display: flex;
+    flex-flow: row nowrap;
+    padding: 0 1rem;
+    height: 50px;
+    line-height: 50px;  
 }
-
-.nav-list {
+.nav-list, .right-nav {
     display: flex;
 }
-
-#list1, #list2 {
-    display: flex;
-    list-style: none;
-}
-
-#list2 {
+.right-nav {
     margin-left: auto;
 }
+.nav {
+    padding: 0 .5rem;
+}
 
+a {
+    text-decoration: none;
+    color: blue;
+}
+a:hover {
+    text-decoration: underline;
+}
 
+main {
+    background-color:rgb(243, 235, 245);
+    height: calc(100vh - 100px);
+}
+.container {
+    display: flex;
+    height: 100%;
+    margin: 0 10%;
+}
+.left-container {
+    background-color: white;
+    margin: 1rem;
+    border-radius: 1.5rem;
+    width: 35%;
+}
 
+li {
+    list-style: none;
+    padding: 1px;
+}
+.main-form {
+    background-color: white;
+    padding: 0 1rem;
+    margin: 1rem;
+    border-radius: 1.5rem;
+    width: 65%;
+}
+h1 {
+    border-bottom: 2px solid blue;
+    padding-bottom: 10px;
+}
+h2 {
+    padding-left: 1rem;
+}
+label:not([for="yes"]):not([for="no"]) {
+    font-weight: bold;
+}
+#yes, #no {
+    margin-top: .5rem;
+}
+
+.field {
+    margin: 1rem 0;
+}
+
+#name {
+    border: .5px solid lightgray;
+    border-radius: 2px;
+    padding: 5px;
+    width: 100%;
+    margin-top: .5rem;
+}
+#usrname {
+    border: .5px solid lightgreen;
+    border-radius: 2px;
+    padding: 5px;
+    width: 100%;
+    margin-top: .5rem;
+}
+#email {
+    border: .5px solid orangered;
+    border-radius: 2px;
+    padding: 5px;
+    width: 100%;
+    margin-top: .5rem;
+}
+#comment {
+    width: 100%;
+    height: 150px;
+    padding: 12px 20px;
+    border: 1px solid lightgray;
+    border-radius: 4px;
+    margin-top: .5rem;
+}
+#note1 {
+    font-size:x-small;
+    margin: .2rem 0;
+    color: lightgreen;
+}
+#note2 {
+    font-size:x-small;
+    margin: .2rem 0;
+    color: orangered;
+}
+
+button {
+    padding: .5rem 1rem;
+    border: 0;
+    border-radius: .4rem;
+    margin-right: 10px;
+}
+button[type="submit"] {
+    background-color: blue;
+    color: white;
+}
+button[type="button"] {
+    background-color: rgb(235, 233, 233);
+    color: blue;
+}
+footer {
+    border: 1px solid;
+    background-color: black;
+    color: rgb(230, 210, 230);
+    height: 50px;
+    line-height: 60px;
+    text-align: center;
+}
